Fix several overly wide screens in specialpurpose/ecommerce:
1: product detail hard-coded the width of the image, even if the actual
image was smaller.
2: products with surveys(gift card purchase) were overly large, which
caused them to float below the left content.
3: the header on productcategory listings had background lines that
overflowed underneath the left and right columns.

The ecommerce app is now closer to something we'd actually show a real
customer, in its default configuration.

git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@995198 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/images/webapp/images/ecommain.css
+++ b/framework/images/webapp/images/ecommain.css
@@ -303,9 +303,9 @@ margin:0 0 0 10px;
 }
 
 #ecom-mainarea .center {
-margin-left:150px;
-margin-right:150px;
 voice-family:inherit;
+overflow:hidden;
+padding:0px 10px;
 }
 
 #ecom-mainarea .leftonly {
@@ -1037,39 +1037,32 @@ display: inline-block;
 }
 
 #productImageBox {
-width: 770px;
+width:100%;
 border-top: 1px #BBBBBB solid;
 display: inline-block;
 }
 div.additionalImage {
-width: 200px;
 }
 
 #detailImageBox {
 float: left;
-height: 800px;
-width: 272px;
+width:50%;
 }
 #additionalImageBox {
 float: left;
-width: 272px;
 }
 
 #productDetailBox {
 float: right;
-height: 266px;
-padding: 266px 0;
-width: 200px;
+width:50%;
 }
 
 #addItemForm {
 clear: both;
-width : 600px;
 border-top: 1px #BBBBBB solid;
 }
 
 #paginationBox {
-width : 600px;
 border-top: 1px #BBBBBB solid;
 border-bottom: 1px #BBBBBB solid;
 }
